# MCD

./: .gitignore  Readme.md  docker_report.sh  docker_report_cars.inputs  docker_report_countries.inputs
.github/agents/: MCD_agent.md  MCD_report.md
docker-report/: AMCD_report.md  satisfaction.csv  weights_results.csv
docker-report/normalised/: normalised_max.csv  normalised_max_min.csv
exemples/cars/: alternatives.csv  criteria.json  scenarios.json
exemples/countries/: criteria.json
exemples/docker-report-cars/: AMCD_report.md  README.md  dominance.csv  weights_results.csv
exemples/docker-report-cars/normalised/: normalised_electre_equal_weights.csv
exemples/docker-report-countries/: AMCD_report.md  README.md  dominance.csv  satisfaction.csv  weights_results.csv
exemples/docker-report_cars/: AMCD_report.md  AMCD_report_FR.md  README.md  satisfaction.csv
python-core/: pyproject.toml
python-core/amcd-core/: domain.py  dominance.py  electra.py  loadData.py  normalize.py  satisfaction.py  weighting.py  weights.py
python-core/amcd-core/test/: alternatives.csv  criteria.json  scenarios.json
python-core/amcd-core/test/normalised_data/: normalised_electre_economic_higher_weight.csv  normalised_max.csv  normalised_max.json  normalised_max_min.csv  normalised_max_min.json  normalised_sum.csv  normalised_sum.json  normalised_vector.csv  normalised_vector.json  set_to_max_scaled.csv  set_to_max_scaled.json
python-core/amcd-core/test/reports/: dominance.csv  satisfaction.csv
rust-core/mcda-tui/: Cargo.toml
rust-core/mcda-tui/src/: main.rs
(+4 files in other folders)
