[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amcd"
version = "0.1.0"
dependencies = [
	"requests>=2.28.0",
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"networkx>=3.0.0",
	"matplotlib>=3.7.0",
	"seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]